Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -1,17 +1,17 @@
 \chapter[Trends]{Trends in observations and EMEP MSC-W model calculations 2000-2019}
 \label{ch:Trends}
 
-{\bf{Authors,Jonas, Eivind, Hans, Jan, Thomas Scheuschner}}\\
+{\bf{Wenche Aas, Hilde Fagerli, Karl Espen Yttri, Svetlana Tsyro, Sverre Solberg, David Simpson, Jonas Gliss, Augustin Mortier, Eivind Grøtting Wærsted, Hans Brenna, Jan Griesfeller, Agnes Ny\'{\i}ri, Thomas Scheuschner}}\\
 
-\old{TODO}
+
 
 \section{\label{sec:Trends_introduction}Introduction and background}
 At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol) as amended in 2012. In order to assess  the progress made towards achieving the environmental and health objectives of the Protocol, a
 list of questions was given to the subsidiary bodies of the Air Convention. Several of these questions were related to the trends of air pollution in Europe. 
 
-In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, EC and OC), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$, exceedances of critical loads for acidification and eutrophication for every 5 year since 2000).
+In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, elemental carbon and organic carbon), oxidized and reduced nitrogen as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceedances of WHO guideline values for PM$_{2.5}$, AOT40 for forests and crops, exceedances of critical loads for acidification and eutrophication for every 5 year since 2000).
 
-Unfortunately, the EMEP observational network is dominated by sites in western Europe and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed in this chapter is only valid for a part of the EMEP domain. As discussed in chapter \ref{ch:emis2019}, the development of emissions in the western and eastern part of the EMEP domain follow different patterns, with clear decreases of all pollutants in the western countries  but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. 
+Unfortunately, the EMEP observational network is dominated by sites in western Europe and has hardly any coverage in the EECCA and western Balkan area. Therefore, the assessment discussed in this chapter is only valid for a part of the EMEP domain. As discussed in chapter \ref{ch:emis2019}, the development of emissions in the western and eastern part of the EMEP domain follow different patterns, with clear decreases of all pollutants in the western countries  but more stable (albeit gradually decreasing for most pollutants) in the eastern part of the domain over the 2000-2019 period. Thus, the trends in the eastern part of the EMEP domain are expected to be different than those presented here for the western part of the domain. Note however, that the uncertainties related to emissions and their trends in the eastern countries are large (see chapter \ref{ch:emis2019}).
 
 
 %*Domain is basically western Europe, no EECCA
@@ -40,7 +40,7 @@ Stromboli and Vulcano) are those reported by
 Italy. \sox and PM emissions from volcanic eruptions of Icelandic volcanoes in the period 2000-2019 (Eyjafjallaj\"okull in 2010, Gr{\'{\i}}msv{\"{o}}tn in 2011  and  Bar\dh{}arbunga in 2014-2015) are reported by Iceland. 
  
 The speciation of PM emissions into emissions of EC, OM and `remPPM' (remaining PPM) components was based on ECLIPSE v6b emission data \footnote{\url{https://iiasa.ac.at/web/home/research/researchPrograms/air/ECLIPSEv6.html}}. These ECLIPSE emissions are given in 5-year intervals (2000, 2005, etc.); intermediate years were derived by linear interpolation. However, all years after 2015 used the 2016 speciation of PM emissions. The VOC speciation was based upon data from various CAMS datasets as described in \cite{R2020:ModDev}, and NOx speciation into NO, \ce{NO2} and `shipNOx' was based upon \QUERY{Older IIASA? Who did this - what is source?}. For NOx and VOC the same (sector-based) speciations were used for all years.
-Soil NOX emissions were based on the new CAMS-GLOB-SOIL v2.2 NOx inventory \citet{SimpsonDarras:2021}. Soil-NOx emissions which are related to the use of fertilizer were not taken from the CAMS-GLOB-SOIL inventory, as these are already included in the EMEP (CEIP) emissions.
+Soil NO$_x$ emissions were based on the new CAMS-GLOB-SOIL v2.2 NO$_x$ inventory \citet{SimpsonDarras:2021}. Soil-NO$_x$ emissions which are related to the use of fertilizer were not taken from the CAMS-GLOB-SOIL inventory, as these are already included in the EMEP (CEIP) emissions.
 A revised set of anthropogenic emissions for all the years 2000-2019 has been used in the model calculations (including all the reported and re-reported data by June 2021), see Chapter~\ref{ch:emis2019}.
 
 
@@ -99,7 +99,7 @@ EMEP reported data for the European region, then the emissions of both POA and E
 
 
 \section{\label{OBSTrends}{Observations}}
-The observations used have all been reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}. The time series have been selected based on statistical criteria as described in the next Section  \ref{Method}. Sites which are situated higher than 2000 masl have been excluded (except DE0003R at 2007 masl) in addition to NO0042G at 474 masl. These sites are often measuring above the boundary layer and the model has problem to represent. For EC and OC, only observations using the reference method EUSSAR-2 \citep{Cavalli:EUSAAR} has been selected. Further, visual inspection of the time series revealed some data sets with very high annual variability and inconsistent development. This can be due to contamination of the samples, change in methods or in the surroundings. Some of these time series have been excluded. Some sites which have moved a very short distance during the time period has been combined into one times series, i.e.: FI0017R and FI0018R, NO0001R and NO0002R, SE0002R and SE0014R, SE0011R and SE0020R. An overview of all the sites that has been used for the different components and periods are found in Table \ref{tab:sites_trend} in Appendix \ref{ch:appx_trends}
+The observations used have all been reported to EMEP and are openly available from the EBAS database (\url{http://ebas.nilu.no}. The time series have been selected based on statistical criteria as described in section  \ref{Method}. Sites which are situated higher than 2000 m.a.s.l. have been excluded (except DE0003R at 2007 m.a.s.l.) in addition to NO0042G at 474 m.a.s.l. These sites are often measuring above the boundary layer, which is not well represented by a model with a resolution of \resZO. For EC and OC, only observations using the reference method EUSSAR-2 \citep{Cavalli:EUSAAR} has been selected and due to lack of long consistent time series, statistics are only done for the last decade for these compounds. Further, visual inspection of the time series revealed some data sets with very high annual variability and inconsistent development. This can be due to contamination of the samples, change in methods or in the surroundings. Some of these time series have been excluded. Some sites which have moved a very short distance during the time period has been combined into one times series, i.e.: FI0017R and FI0018R, NO0001R and NO0002R, SE0002R and SE0014R, SE0011R and SE0020R. An overview of all the sites that has been used for the different components and periods are found in Table \ref{tab:sites_trend} in Appendix \ref{ch:appx_trends}
 
 \section{\label{Method}{Method for calculation of trends}}
 Both observed and modelled trends were processed with the pyaerocom software (\url{https://github.com/metno/pyaerocom}, version XXX) for the following periods: 2000-2019, 2005-2019, 2000-2010, and 2010-2019. All observations were provided via the EBAS database. 
@@ -125,8 +125,9 @@ where $\Delta m$ is the Theil-Sen estimator 95\% confidence interval, $y(start)$
 
 In order to allow for consistent comparisons, the trend is provided as a relative trend (\%/yr) with respect to the first year of the time period.
 
-\COMMENT{WAa: Something on how to get aggregated trends...:}
-The trends and uncertainties in these for all the individual sites are available from a GitHub repository. In the following sections aggregated trends are presented. These have been calculated making average of the sen slopes or relative trends for all the sites, also those with not significant trends. It should be noted that the 95\% confidence intervals given for the average trends not necessarily indicate the robustness in the trend value it self, especially when there are few sites with significant trends.
+\COMMENT{WAa: I have written something on aggregation of trends. Maybe more is needed.  We should probably explain the statistics done by NILU (thus not pyaerocom). Maybe we need to upload the statistics on the Github repository}
+The trends and their uncertainties for all the individual sites are available from the mentioned GitHub repository. In the following sections aggregated trends are presented. These have been calculated making averages of the Sen slopes or relative trends for all the sites, also those with not significant trends. It should be noted that the 95\% confidence intervals given for the average trends not necessarily indicate the robustness in the trend value, especially when there are few sites with significant trends.
+
 
 \section{\label{sec:Trends_sulfur}Trends in sulfur}
 
@@ -145,13 +146,13 @@ Emission reduction commitments in the Gothenburg protocol for sulphur dioxide ar
 
 
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/sulfur_trends.png}
 	\caption{\label{fig:SOx_trends}Trends in sulfur components from 2010-2019 for EMEP observations and model. The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles and the trend in SOx emission is indicated in the plot of \soii with secondary y-axes}
 \end{figure}
 
-\begin{figure} 
+\begin{figure} [h]
   \centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_SO2_2000-2019_Perc.pdf}}\\
 %  \vspace{0.5cm}
   \centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_SO4_2000-2019_Perc.pdf}}
@@ -163,7 +164,7 @@ Emission reduction commitments in the Gothenburg protocol for sulphur dioxide ar
 
 
 
-\begin{table}
+\begin{table}[h]
 \caption{\label{tab:so2_stat} Absolute and relative change and corresponding 95\% confidence intervals in observed and modelled annual and seasonal aggregated \soii concentrations for the different time periods.The number of sites with a significant outcome is provided}
 \begin{center}
 \scalebox{0.65}{%
@@ -185,7 +186,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \end{center}
 \end{table}
 
-\begin{table}
+\begin{table}[h]
 \caption{\label{tab:so4pm_stat} Absolute and relative change and corresponding 95\% confidence intervals in observed and modelled annual and seasonal aggregated \soiv concentrations for the different time periods.The number of sites with a significant outcome is provided}
 \begin{center}
 \scalebox{0.65}{%
@@ -207,7 +208,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \end{center}
 \end{table}
 
-\begin{table}
+\begin{table}[h]
 \caption{\label{tab:so4dep_stat} Absolute and relative change and corresponding 95\%  confidence intervals in observed and modelled annual and seasonal aggregated wet deposition of sulfate for the different time periods.The number of sites with a significant outcome is provided}
 \begin{center}
 \scalebox{0.65}{%
@@ -232,40 +233,45 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 \section{\label{sec:Trends_oxidised_nitrogen }Trends in oxidised nitrogen}
 
-During the last decades, the total emissions of NO$_x$ declined significantly in Europe, followed by declining nitrogen dioxide concentrations, total nitrate (nitric acid plus particulate nitrate) in air and oxidized nitrogen wet deposition at EMEP background sites. 
+During the last decades, the total emissions of NO$_x$ declined significantly in Europe, followed by declining nitrogen dioxide concentrations, total nitrate (nitric acid plus particulate nitrate) in air and oxidized nitrogen wet deposition at EMEP background sites. This is found both for the EMEP MSC-W model calculations and for observations. Similar results have been presented in \citet{Theobald2019} for wet deposition of oxidized nitrogen for the 1990-2010 period and in \citet{Banzhaf2015} for total nitrate for 1990-2009. \citet{torseth2012} also find decreasing trends in nitrogen dioxide, total nitrate and nitrate in precipitations 1990-2009 in EMEP observations. A more recent study, analyzing the period 2000-2017 \citep{Colette2021} and including Airbase and most EMEP observations, also find decreasing trends in nitrogen dioxide.
+
 Figure~\ref{fig:NOx_trends} shows an overview of the annual and seasonal trends in oxidised nitrogen compounds from 2000 to 2019. Tables~\ref{tab:no2_stat} to \ref{tab:no3dep_stat} show absolute and relative changes in the different oxidized nitrogen compounds.
 
 From 2000-2019, the reductions have been on average -1.2\% yr$^{-1}$ for nitrogen dioxide concentrations at EMEP background sites (total -24\%). As NO$_2$ has a short lifetime, the trend in NO$_2$ is expected to reflect the trend in (local) emissions of NOx. During the 2000-2019 period, NO$_x$ emissions within the western EMEP domain (EU27+UK+EFTA countries), where the dominant part of the long term EMEP observations are situated, decreased by -48\%. EMEP/MSC-W model calculations follows the reported emission reductions closely (average reductions of -2.2\% yr$^{-1}$, or in total -42\% ). 
-The agreement between the trends calculated from observations and from the model (and emissions) agree well for the last period (2010-2019), with trends around -2.3\% yr$^{-1}$, whilst the trend in the first period is substantially lower in the observations than in the model calculations (and emissions). From Figure~\ref{fig:NOx_trends} it can be seen that the agreement between observations and model calculations is excellent until around 2008, but that in the year 2009 and onwards the model (and emissions) is shifted down relative to the observations. Similar results have been found in REF (Augustin/Sverres study for EEA sites versus emissions - can we refer to that?)
+The agreement between the trends calculated from observations and from the model (and emissions) agree well for the last period (2010-2019), with trends around -2.3\% yr$^{-1}$, whilst the trend in the first period is substantially lower in the observations than in the model calculations (and emissions). From Figure~\ref{fig:NOx_trends} it can be seen that the agreement between observations and model calculations is excellent until around 2008, but that in the year 2009 and onwards the model (and emissions) is shifted down relative to the observations. Similar results have been found in \citep{Colette2021}.
 
 
-The trends in wet deposition of oxidized nitrogen reflects the long range transported oxidized nitrogen (NO$_x$ that has been converted to nitric acid and particulate nitrate and then washed out by rain) and is less sensitive to local changes. Also the trends for wet deposition of nitrate are lower in the observations than in the model calculations (and emissions of NOx) for the 2000-2019 period. Whilst the average trend in observations is -1.4\% yr$^{-1}$ (total of -26\%), the model calculates the trend at the same sites to be -2.1 \% yr$^{-1}$ (total of -40\%), close to the trends in emissions from the western EMEP domain (-48\%). The difference between the trend in observations (and emissions?) are largest during the first period, similar to the results for NO$_2$. However, the model overestimates nitrate wet deposition somewhat up to around 2010, and are then shifted downward and in very good agreement with observations for the years after. Note that the number of sites with significant trends for the shorter periods are small, and thus the results encumbered with more uncertainty.
+
+
+The trends in wet deposition of oxidized nitrogen reflects the long range transported oxidized nitrogen (e.g. NO$_x$ that has been converted to nitric acid and particulate nitrate and then washed out by rain) and is less sensitive to local changes. Also the trends for wet deposition of nitrate are lower in the observations than in the model calculations (and emissions of NOx) for the 2000-2019 period. Whilst the average trend in observations is -1.4\% yr$^{-1}$ (total of -26\%), the model calculates the trend at the same sites to be -2.1 \% yr$^{-1}$ (total of -40\%), close to the trends in emissions from the western EMEP domain (-48\%). The difference between the trend in observations (and emissions?) are largest during the first period, similar to the results for NO$_2$. However, the model overestimates nitrate wet deposition somewhat up to around 2010, and are then shifted downward and in very good agreement with observations for the years after. Note that the number of sites with significant trends for the shorter periods are small, and thus the results encumbered with more uncertainty.
 
 For particulate nitrate, nitric acid and their sum the results are more complex. The number of sites are few (especially for nitric acid, with only 6 sites), the coverage of Europe more scattered and the quality of the measurements is worse. 
 
-The modelled trends for 2000 to 2019 are all around -2 to -2.3\% per year for particulate nitrate, nitric acid and their sum - aligned with the results of NO$_2$ and wet deposition of oxidized nitrogen and the emissions. The observations show a somewhat smaller negative trend of around -1.6\% yr$^{-1}$ for the sum and around -2\% yr$^{-1}$ both for particulate nitrate and nitric acid. For the shorter periods, the number of sites with significant trends are very small, both in the model calculations and the observations, and thus the results more uncertain.
+The modelled trends for 2000 to 2019 are all around -2 to -2.3\% per year for particulate nitrate, nitric acid and their sum - aligned with the results of NO$_2$, wet deposition of oxidized nitrogen and the emissions. The observations show a somewhat smaller negative trend of around -1.6\% yr$^{-1}$ for the sum and around -2\% yr$^{-1}$ both for particulate nitrate and nitric acid. For the shorter periods, the number of sites with significant trends are very small, both in the model calculations and the observations, and thus the results more uncertain.
 However, for all the three observations, the trend in the first period (2000-2010) is smaller than the trend in the second period, whilst the model show a rather similar trend for the sum, and larger trends in the first period for the separate components.
+
+In Figure~\ref{fig:OXNtrends}, the trends for the individual sites are visualized on a map on top of the EMEP MSC-W model calculations. For NO$_2$ and wet deposition of oxidized nitrogen, the trends in the observations on the eastern part of the domain are smaller and to a larger extent non significant, whilst the trends in the EMEP MSC-W model calculations are in general larger and more often significant. The reasons for these discrepancies are not clear, but could be related to problems/inaccuracies in emission reporting and their trends, processes that are not (well enough) taken into account or in the observations themselves.
 
 In summary we find that oxidized nitrogen in air and precipitation has been decreasing since 2000. However, the decrease in the observations (-24\% for NO2 and -26\% for wet deposition of oxidized nitrogen) are smaller than in model calculations (-42\% for NO2 and -40\% for wet deposition of oxidized nitrogen) and emissions (-48\% for EU27+UK+EFTA). 
 
-\begin{figure}
+\begin{figure}[h]
 	\centering
 	\includegraphics[width=0.74\paperwidth]{FIGS_TRENDS/Nox_trends.png}
-	\caption{\label{fig:NOx_trends}Trends in oxidised nitrogen compounds from 2010-2019 for EMEP observations and model.The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles and the trend in NOx emission is indicated in the plot of \noii with secondary y-axes}
+	\caption{\label{fig:NOx_trends}Trends in oxidised nitrogen compounds from 2010-2019 for EMEP observations and model. The solid line in the trend plots indicate the average annual mean concentrations for all the sites and the shaded area the 95 \% confidence interval. The box plot represent the 50,25,75 percentiles and the whiskers lie within the 1.5 inter-quartile ranges for the trends of all the sites, including those with not significant trends. In addition, the mean trends are indicated with black circles and the trend in NOx emission is indicated in the plot of \noii with secondary y-axes}
 \end{figure}
 
 \begin{figure}[h]
-  \centering{\includegraphics[clip=,angle=90,height=3.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_NO2_2000-2019_Perc.pdf}}
+  \centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_NO2_2000-2019_Perc.pdf}}
 %  \vspace{0.5cm}
-  \centering{\includegraphics[clip=,angle=90,height=3.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_TNO3_2000-2019_Perc.pdf}}
-\centering{\includegraphics[clip=,angle=90,height=3.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_NO3_2000-2019_Perc.pdf}}
-\centering{\includegraphics[clip=,angle=90,height=3.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_WDEP_OXN_2000-2019_Perc.pdf}}
+  \centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_TNO3_2000-2019_Perc.pdf}}
+\centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_NO3_2000-2019_Perc.pdf}}
+\centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_WDEP_OXN_2000-2019_Perc.pdf}}
 \caption{Relative trends for NO$_2$, total nitrate, nitrate aerosol and wet deposition of oxidized nitrogen in the period of 2000-2019: EMEP modelled -- coloured contours (grey/white means non-significant trends) and
 observed - coloured triangles (significant) and circles (non-significant).}
 \label{fig:OXNtrends}
 \end{figure}
 
-\begin{table}
+\begin{table}[h]
 \caption{\label{tab:no2_stat} Absolute and relative change and corresponding 95\% confidence intervals in observed and modelled annual and seasonal aggregated \noii concentrations for the different time periods. The number of sites with a significant outcome is provided}
 \begin{center}
 \scalebox{0.65}{%
@@ -289,7 +295,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 
 
-\begin{table}
+\begin{table}[h]
 \caption{\label{tab:tno3_stat} Absolute and relative change and corresponding 95\% confidence intervals in observed and modelled annual and seasonal aggregated concentrations of total nitrate ({\ensuremath{\mbox{HNO}_{\rm 3}}} + \noiii) in air and aerosols. The number of sites with a significant outcome is provided}
 \begin{center}
 \scalebox{0.65}{%
@@ -311,7 +317,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \end{center}
 \end{table}
 
-\begin{table}
+\begin{table}[h]
 \caption{\label{tab:no3pm_stat}  Absolute and relative change and corresponding 95\% confidence intervals in observed and modelled annual and seasonal aggregated concentrations of  \noiii concentrations in aerosols. The number of sites with a significant outcome is provided}
 \begin{center}
 \scalebox{0.65}{%
@@ -333,7 +339,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \end{center}
 \end{table}
 
-\begin{table}
+\begin{table}[h]
 \caption{\label{tab:hno3_stat} Absolute and relative change and corresponding 95\% confidence intervals in observed and modelled annual and seasonal aggregated concentrations of {\ensuremath{\mbox{HNO}_{\rm 3}}}. The number of sites with a significant outcome is provided.}
 \begin{center}
 \scalebox{0.65}{%
@@ -356,7 +362,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \end{table}
 
 
-\begin{table}
+\begin{table}[h]
 \caption{\label{tab:no3dep_stat}Absolute and relative change and corresponding 95\% confidence intervals in observed and modelled annual and seasonal aggregated wet deposition of nitrate for the different time periods. The number of sites with a significant outcome is provided.}
 \begin{center}
 \scalebox{0.7}{%
@@ -416,10 +422,10 @@ In summary, the observations and the model calculations confirms that very small
 \end{figure}
 
 \begin{figure}[h]
-  \centering{\includegraphics[clip=,angle=90,height=3.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_TNH4_2000-2019_Perc.pdf}}
+  \centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_TNH4_2000-2019_Perc.pdf}}
 %  \vspace{0.5cm}
-  \centering{\includegraphics[clip=,angle=90,height=3.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_NH4_2000-2019_Perc.pdf}}
-\centering{\includegraphics[clip=,angle=90,height=3.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_WDEP_RDN_2000-2019_Perc.pdf}}
+  \centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_NH4_2000-2019_Perc.pdf}}
+\centering{\includegraphics[clip=,angle=90,height=6.1cm,viewport=175 67 448 754]{FIGS_TRENDS/RelTrend_WDEP_RDN_2000-2019_Perc.pdf}}
 \caption{Relative trends for total ammonium (sum of ammonia and aerosol ammonium), aerosol ammonium and wet deposition of reduced nitrogen in the period of 2000-2019: EMEP modelled -- coloured contours (grey/white means non-significant trends) and
 observed - coloured triangles (significant) and circles (non-significant).}
 \label{fig:RDNtrends}
@@ -940,12 +946,12 @@ autumn &              15 &          1 &           0 &                  -0.098 & 
 
 \subsection{Discussion of EC, OC trends}
 
-Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} in  more detail, it is important to note that ten years is a short period over which to assess such trends. In order to illustrate this, Table~\ref{tab:BirkenesTrends} shows trends assessed for three periods, 2008-2018, 2008-2019, and 2010-2019, all using the same methodology. It is seen that the magnitude of the trends can differ substantially depending on the time-window. For EC the values range from -2.2\%/yr to -4.24\%/yr, and for levoglucosan from -2.5\%/yr to -5.2\%/yr, with all values satisfying the p-value$<$0.05 significance test. Trend values for OC vary even more, but these trends were insignificant for all periods. Although we expect some of these trends to reflect changes in emissions, meteorological variation will also play a large role, especially in causing the high sensitivity of the calculated trends to small changes in the time window chosen.
+Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} in  more detail, it is important to note that ten years is a short period over which to assess such trends. In order to illustrate this, Table~\ref{tab:BirkenesTrends} shows trends assessed for three periods, 2008-2018, 2008-2019, and 2010-2019, all using the same methodology. It is seen that the magnitude of the trends can differ substantially depending on the time-window. For EC the values range from -2.2\%/yr to \mbox{-4.24\%/yr}, and for levoglucosan from -2.5\%/yr to -5.2\%/yr, with all values satisfying the p-value$<$0.05 significance test. Trend values for OC vary even more, but these trends were insignificant for all periods. Although we expect some of these trends to reflect changes in emissions, meteorological variation will also play a large role, especially in causing the high sensitivity of the calculated trends to small changes in the time window chosen.
 
 
 \begin{table}[H]
 \centering
-\parbox{11cm}{
+\parbox{11.9cm}{
 \caption{Relative trends (\%/yr) (and p-values in parentheses) calculated for Birkenes 
     using different time-windows \label{tab:BirkenesTrends}}}
 \begin{tabular}{lcccc}
@@ -956,49 +962,56 @@ Before discussing the trends shown in Sect.~\ref{ss:trendsEC}-\ref{ss:trendsOC} 
 %\multicolumn{5}{c}{Revised from Wenche 26/8/21} \\
 EC   & annual  & -3.0 (0.043)        &  -2.21 (0.034)   & -4.24 (0.012) \\
 OC   & annual  &  -0.44 (0.876)      &   0.18 (1)     & -0.64 (1)   \\
-Levo & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) \\
+Levoglucosan & annual  & -2.5 (0.043)        &  -2.48 (0.024)   & -5.2  (0.032) \\
 & & & & \\
 \bottomrule 
 \end{tabular}\\
-\parbox{11cm}{
+\parbox{11.9cm}{
 
 Notes:
 (a) Values for 2008-2018 use same procedure as for 2008-2019 and 2010-2019. Numbers
-differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2\%Yr for EC and -2.8\%/yr for levoglucosan.\\
+differ slightly from results of \citet{Yttri2021}, which had 2008-2018 trends of -4.2\%/yr for EC and -2.8\%/yr for levoglucosan.\\
 \COMMENT{ISSUES:\\ Explain diffs to Yttri et al 2021 and 2008-2018 trends better?\\
 p-values of 1 look odd. Do we have any good words for this?}\\
 }
 \end{table}
 
-IN PROGRESS...
-Larger differences are seen in the absolute changes (which may reflect the difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
+%IN PROGRESS...
+%Larger differences are seen in the absolute changes (which may reflect the %difficulties with the EC emissions mentioned in Sect.~\ref{ss:IssuesECOC}).
 
-At first sight, the 2010-2019 reduction of 4.2\%/yr in observed EC across all seasons is rather dramatic, though as noted above a different choice if time-window might suggest a lower magnitude of changes. Presumably 
-
-
-As discussed in Sect.~\ref{ss:trendsEC} there is only a minor seasonal variability in the reduction of EC. This probably reflects the minor seasonal variability in most EC sources, except from
-residential heating. \citet{Yttri2021} found that the reduction in EC
+The 2010-2019 reduction of 4.2\%/yr in observed EC across all seasons is rather dramatic, though as noted above a different choice of time-window might suggest a lower magnitude of changes. 
+As discussed in Sect.~\ref{ss:trendsEC} there is only a minor seasonal variability in the reduction of EC. This partly reflects the minor seasonal variability in most EC sources, but it is puzzling since residential heating (in GNFR sector C) should have clear winter maxima. \citet{Yttri2021} found that the reduction in EC
 was most pronounced in spring and summer at the Birkenes Observatory in
 southern Norway for 2001--2018, arguing that this was due to influence
-from less abated sources such as domestic heating in winter and fall,
+from less abated sources such as domestic heating in winter and fall. This argument was
 supported by a lower (-2.8\%/yr) reduction for the biomass burning
-tracer levoglucosan (2008--2018) than for EC (-4.2\%/yr). Here,
+tracer levoglucosan (2008--2018) than for EC (-4.2\%/yr) (these trend numbers are from \citeauthor{Yttri2021}, and differ slightly from trends calculated for this report, c.f. Tab.~\ref{tab:BirkenesTrends}). In this study, however, 
 we calculated a -5.2\%/yr reduction for the biomass burning tracer
 levoglucosan observed at the Birkenes Observatory for 2010-2019, which is
-higher than the -4.2\%/yr calculated for EC, suggesting that abatement
-of carbonaceous aerosol from biomass burning has been equally successful
-as that of EC from fossil fuel sources, contradicting the conclusion made
-by \citet{Yttri2021} \COMMENT{DS: I would be careful with the word contradict. These time-series are not long, and as you show, one can get -2.8\% or -5.2 depending on starting year!}.   As the biomass burning emissions observed at the
-Birkenes Observatory is largely long-range transported from Continental
-Europe and Western Russia \citep{Yttri2021}, our finding for Birkenes
-is likely to be representative for a larger part of Europe. However,
-caution should be made drawing firm conclusions from such short time
-series as those presented here\COMMENT{ Yes!}, illustrated by the different reductions
-calculated for levoglucosan for 2008--2018 and for 2010--2019.
+higher than the -4.2\%/yr calculated for EC.
+%, which might suggest that abatement of carbonaceous aerosol from biomass burning has been equally successful as that of EC from fossil fuel sources. This 
+This finding seems to contradict the conclusion made
+by \citet{Yttri2021}, but the differences in trends using different time-windows (c.f.Tab.~\ref{tab:BirkenesTrends}) suggests it is difficult to draw firm conclusions about these changes.
 
-A statistically significant downward trend of similar magnitude
-(-4.2\%/yr) was calculated for EC for 2010--2019 as for 2001--2018
-for the Norwegian Birkenes Observatory \citep{Yttri2021}. Influenced by
+
+As the biomass burning emissions observed at the
+Birkenes Observatory is largely long-range transported from Continental
+Europe and Western Russia \citep{Yttri2021}, our findings for Birkenes
+are likely to be representative for a larger part of Europe. However,
+changing footprints  for the Birkenes site may also affect both the trends and
+the relative contributions of biomass burning and residential wood combustion (RWC).
+Figure~\ref{fig:gnfrCtrends} shows that for some countries, for example France, GNFR C \pmfine emissions have been in constant decline throughout the 2000s. Declines are seen in other countries from around 2010 onwards also. Thus, abatemement of RWC emissions seem to be in place for many countries within the Birkenes footprint area, though the magnitude of the contribution from different countries will of course vary from year to year.
+
+The issues with condensable organics (Sect.~\ref{ss:IssuesECOC}) impact these estimates of \pmfine emissions and their trends also, and Figure~\ref{fig:gnfrCtrends} is a good illustration of this. France is a country which includes condensables, and Germany is one that does not \citep{CONDws2020}. This difference is a major reason for the magnitude of the French GNFR C emissions compared to those of the more highly populated Germany. 
+
+
+%caution should be made drawing firm conclusions from such short time series as those %presented here\COMMENT{ Yes!}, illustrated by the different reductions calculated for %levoglucosan for 2008--2018 and for 2010--2019.
+
+We can note that \citet{Yttri2021} also found a statistically significant downward trend of similar magnitude
+(-4.2\%/yr)  for EC for 2010--2019 as for 2001--2018
+for the Norwegian Birkenes Observatory \citep{Yttri2021}. This suggests a large-scale reduction in EC emissions.
+
+\SKIP{Influenced by
 major anthropogenic emission regions in Europe, this finding indicates a
 potential for further reductions in future years not only at the Birkenes
 Observatory but for Europe in general.  The model calculated a reduction
@@ -1008,18 +1021,20 @@ the model-calculated reduction equaled that based on observations,
 whereas it was lower for the other seasons. As for the observations,
 the model predicted a reduction in EC for all sites, but for a few sites
 the model estimated a reduction that was 3--4 times larger than seen
-for the observations.
+for the observations.}
 
 \begin{figure}
     \centering
-    \includegraphics[width=12cm,trim=0 0 0 1.5cm]{FIGS_TRENDS/PlotEmisTrends_PM2_5.png}
+    \includegraphics[width=12cm,trim=0 0 0 1.5cm,clip]{FIGS_TRENDS/PlotEmisTrends_PM2_5.png}
     \caption{Trends in \pmfine emissions from GNFR C (mainly residential heating)}
     \label{fig:gnfrCtrends}
 \end{figure}
 
-MOVED FROM OC: 
+ 
 
-Unlike EC, OC has a substantial influence from
+Unlike EC, the observed seasonal trends for OC (c.f. Fig.~\ref{fig:KEX1} are very variable, with strong (ca. 4\%) reductions in the winter months (both DJF and SON), and essentially no change in summertime.
+
+OC has a substantial influence from
 natural sources, biogenic secondary organic aerosol (BSOA) and primary
 biological aerosol particles (PBAP), which prevail in the growing season,
 and which is not subject to abatement and thus is a major driver of
